<resources>
    <string name="app_name">Kawa</string>
    <string name="content_desc_fluid_animation">fluid animation</string>
    <string name="content_desc_splash_image">splash image</string>
    <string name="content_desc_splash_logo">splash logo</string>
    <string name="content_desc_koan_image">Koan image</string>
    <string name="letter_d">D</string>


    <!--Navigation Items-->
    <string name="nav_item_now">now</string>
    <string name="nav_item_theme">theme</string>
    <string name="nav_item_image_info">image info</string>
    <string name="nav_item_share">share</string>
    <string name="nav_item_download_image">download Image</string>
    <string name="nav_item_set_as_wallpaper">set as wallpaper</string>
    <string name="nav_item_all_koans">all koans</string>
    <string name="nav_item_search">search</string>
    <string name="nav_item_about">about</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">search</string>
    <string name="content_desc_list_type">toggle result style between list and square</string>
    <string name="content_desc_clear_search">clear search content</string>
    <string name="content_desc_open_koan">open koan</string>
    <string name="this_app_is_dedicated_to_krishna">this app is dedicated to krishna</string>
    <string name="krishna_in_japanese">クリシュナ</string>
    <string name="share"><u>share</u></string>
    <string name="rate"><u>rate</u></string>
    <string name="donate"><u>get donation version</u></string>
    <string name="content_desc_flute">flute</string>

    <string name="artist_name">by %1s</string>


    <string name="transition_koan_item">koan_item_%1$s</string>
    <string name="transition_koan_detail">koan_detail</string>

    <string name="dismiss">Dismiss</string>
    <string name="success_set_wallpaper">Wallpaper applied to home screen.</string>
    <string name="failure_set_wallpaper">Some error occurred while setting the wallpaper.</string>
    <string name="font_name_sans_serif">sans-serif</string>
    <string name="font_name_bi_mincho">bi mincho</string>
    <string name="font_name_serif">serif</string>
    <string name="font_size_preview">Aa</string>
    <string name="request_for_storage_permission">Please grant the storage permission to download the image.</string>

    <string name="download_app_to_read_complete_koan">To read the complete koan, download the Kawa application from here:
    \nhttps://play.google.com/store/apps/details?id=%1$s</string>

    <string name="download_app_to_read_more_koan">To read more koans, download the Kawa application from here:
    \nhttps://play.google.com/store/apps/details?id=%1$s</string>

    <!--Share App-->
    <string name="title_share_via">Share via :</string>
    <string name="msg_share_app">
        With Kawa, you can read over 100 zen stories with beautiful paintings. Zen Koans are short stories containing moral values and enigmas that challenge your mind. These stories come from various sources and different zen masters.
        \n\nDownload Kawa and start reading the koans now:
        \nhttps://play.google.com/store/apps/details?id=%1$s</string>
    <string name="err_no_app_can_share_it">Couldn\'t find any app that can share data</string>

    <string name="donate_version_pkg_name">com.arupakaman.kawa.donate</string>
    <string name="no_koans_found">No koans found</string>
    <string name="what_you_seek_is_seeking_you">What you seek is seeking you…</string>

    <string name="ad_attribution">Ad</string>
    <string name="back_again_to_exit">Tap the back button to exit</string>
    <string name="search_by_koan_title">Search by koan title</string>
    <string name="search_by_koan">Search by koan</string>
    <string name="menu_item_title_open_drawer">Open Drawer</string>
    <string name="notification">Notification</string>

    <!--<string name="test_admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="test_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <!--<string name="ad_banner_koan_detail" translatable="false">ca-app-pub-5907109655869059/3552284277</string>
    <string name="ad_banner_koan_image" translatable="false">ca-app-pub-5907109655869059/6925387221</string>
    <string name="ad_banner_koan_listing" translatable="false">ca-app-pub-5907109655869059/8837234697</string>
    <string name="ad_banner_koan_search" translatable="false">ca-app-pub-5907109655869059/6949437959</string>
    <string name="ad_native" translatable="false">ca-app-pub-5907109655869059/7116958912</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5907109655869059~6753162682</string>-->

</resources>