<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/itemNow"
        android:title="@string/nav_item_now"/>

    <item android:id="@+id/itemTheme"
        android:title="@string/nav_item_theme"/>

    <item android:id="@+id/itemImageInfo"
        android:title="@string/nav_item_image_info"/>

    <item android:id="@+id/itemShare"
        android:title="@string/nav_item_share"/>

    <item android:id="@+id/itemDownloadImage"
        android:title="@string/nav_item_download_image"/>

    <item android:id="@+id/itemSetAsWallpaper"
        android:title="@string/nav_item_set_as_wallpaper"/>

    <item android:id="@+id/itemAllKoans"
        android:title="@string/nav_item_all_koans"/>

    <item android:id="@+id/itemSearch"
        android:title="@string/nav_item_search"/>

    <item android:id="@+id/itemAbout"
        android:title="@string/nav_item_about"/>

    <item android:id="@+id/itemNotificationSwitch"
        android:checkable="false"
        app:actionLayout="@layout/partial_notification_switch"
        android:title="@string/notification"/>

</menu>