<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.koans.about.AboutUsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dedicatedTo"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/this_app_is_dedicated_to_krishna"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtKrishna"
        android:fontFamily="@font/satsuki_gendai_mincho"
        android:gravity="center"
        android:text="@string/krishna_in_japanese"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/dedicatedTo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/ic_flute"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKrishna"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_15sdp"
        app:tint="?colorBorder"
        android:contentDescription="@string/content_desc_flute" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtDonate"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/txtShare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtShare"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/txtRate"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtRate"
        android:background="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@+id/txtShare"
        app:layout_constraintStart_toEndOf="@+id/txtShare"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>