<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_splash_scene"
    tools:context=".ui.splash.SplashActivity">

    <ImageView
        android:id="@+id/imgFluidTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_fluid_animation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--app:layout_constraintDimensionRatio="H,1.38:1"-->

    <ImageView
        android:id="@+id/imgSplash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_frame"
        android:contentDescription="@string/content_desc_splash_image"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_40sdp"
        android:src="@drawable/simon_de_vlieger_a_calm_sea"
        app:layout_constraintBottom_toTopOf="@+id/imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:contentDescription="@string/content_desc_splash_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSplash" />

    <ImageView
        android:id="@+id/imgFluidBottomRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_fluid_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>