<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.arupakaman.kawa.ui.koans.search.SearchKoansViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.koans.search.SearchKoansFragment">

    <LinearLayout
        android:id="@+id/linSearch"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSearch"
            android:hint="@string/hint_search"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingHorizontal="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:importantForAutofill="no"
            android:inputType="text" />

        <ImageView
            android:id="@+id/imgListType"
            android:background="@drawable/ripple_circular"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_square"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:contentDescription="@string/content_desc_list_type" />

        <ImageView
            android:id="@+id/imgClearSearch"
            android:background="@drawable/ripple_circular"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_circle_solid"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:contentDescription="@string/content_desc_clear_search" />

    </LinearLayout>

    <View
        android:id="@+id/dividerSearch"
        android:background="?colorBorder"
        app:layout_constraintTop_toBottomOf="@+id/linSearch"
        app:layout_constraintStart_toStartOf="@+id/linSearch"
        app:layout_constraintEnd_toEndOf="@+id/linSearch"
        android:layout_width="0dp"
        android:layout_height="1dp"/>

    <!--<TextView
        android:id="@+id/txtKoanTest"
        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/dividerSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKoans"
        listData="@{viewModel.liveKoansHighlightedList}"
        cardData="@{viewModel.liveKoansCard}"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        tools:itemCount="10"
        tools:listitem="@layout/item_koan_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/dividerSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>