<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorKoanBg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        app:layout_constraintGuide_begin="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        app:layout_constraintGuide_begin="@dimen/_20sdp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        app:layout_constraintGuide_end="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        app:layout_constraintGuide_end="@dimen/_20sdp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSansSerif"
        android:fontFamily="sans-serif"
        android:background="@drawable/selector_text_style"
        android:padding="@dimen/_10sdp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:text="@string/font_name_sans_serif"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintEnd_toStartOf="@+id/txtBiMincho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtBiMincho"
        android:background="@drawable/selector_text_style"
        android:fontFamily="@font/sawarabi_mincho_regular"
        android:padding="@dimen/_10sdp"
        android:text="@string/font_name_bi_mincho"
        app:layout_constraintStart_toEndOf="@+id/txtSansSerif"
        app:layout_constraintEnd_toStartOf="@+id/txtSerif"
        app:layout_constraintTop_toTopOf="@+id/txtSansSerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSerif"
        android:background="@drawable/selector_text_style"
        android:fontFamily="serif"
        android:padding="@dimen/_10sdp"
        android:text="@string/font_name_serif"
        app:layout_constraintStart_toEndOf="@+id/txtBiMincho"
        app:layout_constraintTop_toTopOf="@+id/txtBiMincho"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/viewMinus"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toStartOf="@+id/txtFontSizePreview"
        app:layout_constraintTop_toTopOf="@+id/txtFontSizePreview"
        app:layout_constraintBottom_toBottomOf="@+id/txtFontSizePreview"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        android:background="@drawable/bg_minus"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"/>

    <TextView
        android:id="@+id/txtFontSizePreview"
        android:textSize="@dimen/_12ssp"
        android:background="?colorBg"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/font_size_preview"
        app:layout_constraintStart_toEndOf="@+id/viewMinus"
        app:layout_constraintEnd_toStartOf="@+id/viewPlus"
        app:layout_constraintTop_toBottomOf="@+id/txtBiMincho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/viewPlus"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintStart_toEndOf="@+id/txtFontSizePreview"
        app:layout_constraintTop_toTopOf="@+id/txtFontSizePreview"
        app:layout_constraintBottom_toBottomOf="@+id/txtFontSizePreview"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        android:background="@drawable/bg_plus"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"/>

    <View
        android:id="@+id/viewDay"
        android:background="@drawable/bg_day"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@+id/viewTwilight"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/txtFontSizePreview"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"/>

    <View
        android:id="@+id/viewTwilight"
        android:visibility="gone"
        android:background="@color/colorTwilight"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/viewNight"
        app:layout_constraintStart_toEndOf="@+id/viewDay"
        app:layout_constraintTop_toTopOf="@+id/viewDay"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"/>

    <View
        android:id="@+id/viewNight"
        android:background="@drawable/bg_night"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@+id/viewTwilight"
        app:layout_constraintStart_toEndOf="@+id/viewTwilight"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>